[package]
name = "keyward"
version = "0.1.0"
edition = "2021"
description = "Keyward — internal CA / PKI authority (root CA + leaf issuance + CRL) for the HOLDFAST stack."
license = "MIT OR Apache-2.0"

[lib]
name = "keyward"
path = "src/lib.rs"

[[bin]]
name = "keyward"
path = "src/main.rs"

[dependencies]
# HTTP framework (shared with keystone): Json/State extractors, typed responses.
axum = "0.8"
# Async runtime axum runs on. The Store trait is async: handlers `.await` it directly and
# PgStore uses sqlx natively, so a worker thread is NEVER blocked (no sync-over-async bridge).
# multi-thread keeps the serving runtime parallel for concurrent issuance / CRL reads.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Erase the async Store trait methods so `Arc<dyn Store>` stays object-safe (handlers depend
# only on the trait, exactly like the keystone seam).
async-trait = "0.1"
# X.509 toolkit: Root CA + leaf issuance, CSR signing, and CRL generation.
# `ring` backend (NOT the default aws_lc_rs) avoids the C/cmake/nasm toolchain —
# same portability choice keystone made by pinning its crypto provider. `pem`
# gives PEM (de)serialisation; `x509-parser` enables from_ca_cert_pem + CSR parse.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }
# CSPRNG (OsRng) for random 128-bit certificate serials. rand 0.8 lineage.
rand = "0.8"
# Hex-encode the 128-bit serial for the API + DB primary key.
hex = "0.4"
# OffsetDateTime feeds rcgen's not_before/not_after. We construct from epoch seconds
# (from_unix_timestamp) so validity windows use the same clock discipline as the store.
time = { version = "0.3", default-features = false, features = ["std"] }
# (De)serialize request/response bodies.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ergonomic error enum -> JSON error envelope.
thiserror = "2"
# Structured logging.
tracing = "0.1"
tracing-subscriber = "0.3"
# Portable PostgreSQL data layer. Runtime queries only (sqlx::query/Row) — NO
# compile-time macros, so the build needs NO database. rustls TLS (no openssl).
# Later runs unchanged on FusionDB over pgwire (standard SQL, TEXT/BIGINT/BOOLEAN).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }

[dev-dependencies]
# ServiceExt::oneshot drives the Router in-process for the end-to-end tests (no port bind).
tower = { version = "0.5", features = ["util"] }
